# Pixel-Player

./: CMakeLists.txt  README.md  dimensions.c  dithering.c  dithering.h  error.c  meetingNotes22Feb  meetingNotes22Feb.md
src/: CMakeLists.txt  dimensions.c  dithering.c  dithering.h  main.c  photoprocess.c  photoprocess.h  stb_image_resize.h
test/: CMakeLists.txt  hello.txt  test_dithering.c  test_photoprocess.c
